fix: set display time on top-left of browser on full screen. centered on mobile phones

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -187,8 +187,8 @@ HEADER SECTION
 
 .time-now {
 	position: fixed;
-	top: 55px;
-	text-align: center;
+	top: 18px;
+	text-align: left;
 	color: var(--orange);
 	font-size: 16px;
 	width: 100%;
